@@ -1,3 +1,7 @@
+2007-09-06  Brian Bidulock  <bidulock@openss7.org>
+
+	* src/include/sys/sun/strsun.h: correction to MBLKIN
+
 2007-08-19  Brian Bidulock  <bidulock@openss7.org>
 
 	* src/include/sys/os7/compat.h: move stdbool.h here
